Fixed front page image. It is not stretched anymore.

--- a/mdfserver/static/mdfserver/css/custom_style.css
+++ b/mdfserver/static/mdfserver/css/custom_style.css
@@ -79,8 +79,10 @@
 }
 
 .big_image {
-    width: 87%;
+    /*width: 87%;*/
     height: 440px;
+    overflow: hidden;
+    margin-left: -16%;
 }
 
 .image_msg {
